--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://kit.fontawesome.com/b8dab6dd64.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -24,8 +25,8 @@
                 <h4 class="banner-greetings dark-2">Hi, I  am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -141,13 +142,12 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </section>
             </div>
     </main>
 
     <footer class="secondary-bg">
-
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
@@ -168,7 +168,6 @@
             </form>
 
         </div>
-
     </footer>
     
 </body>
